# rust_solana_learning

./: .gitignore  Cargo.toml  id.json  note.md  package-lock.json  package.json  readme.md  solana_cli.md  tsconfig.json
01_hello_solana/: lib.rs
basic/: Keypair.ts  getBalance.ts  getBalanceForSPLToken1.ts  getBalanceForSPLToken2.ts  getBalanceForSol.ts  getMetaData.ts  sendSPLToken1.ts  sendSPLToken2.ts  sendSol.ts
client/: 01_hello_solana.ts  02_counter.ts  constants.ts  hello_solana.ts
notes/: 01_overview.md  02_account.md  03_transaction.md  entrypoint.md  process_instruction.md  spl_token.md  whole.md
src/: lib.rs
tools/: getAssociatedTokenAddress.ts  loadKeypair.ts
