[package]
name = "rust_solana_learning"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=2.0.21"              # 在 Cargo.toml 中使用 = 固定依赖版本，加上 = 后，Cargo 将强制安装指定版本，而不会解析到兼容的更高版本。

[dev-dependencies]
solana-program-test = "=2.0.21"         # 由于rustc 为1.78.0版本，和现在默认的最新版本solana-program不兼容，因此强制安装为兼容版本
solana-sdk = "=2.0.21"

[lib]
crate-type = ["cdylib", "lib"]